--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -8,39 +8,25 @@
     <version>2.7.18</version>
     <relativePath />
   </parent>
+
   <groupId>com.example</groupId>
   <artifactId>payment-service</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>payment-service</name>
+
   <properties>
     <java.version>1.8</java.version>
-    <spring-boot.version>2.7.18</spring-boot.version>
   </properties>
-
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>${spring-boot.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-webflux</artifactId>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
 
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <!-- inter-service HTTP -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-validation</artifactId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springdoc</groupId>
@@ -56,10 +42,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-webflux</artifactId>
     </dependency>
   </dependencies>
 
